[gd_scene load_steps=12 format=1]

[ext_resource path="res://player_selection.gd" type="Script" id=1]
[ext_resource path="res://time_management_background.png" type="Texture" id=2]
[ext_resource path="res://player_screen.png" type="Texture" id=3]
[ext_resource path="res://customer_six.png" type="Texture" id=4]
[ext_resource path="res://pixel.png" type="Texture" id=5]
[ext_resource path="res://pixels_font.fnt" type="BitmapFont" id=6]
[ext_resource path="res://button.png" type="Texture" id=7]
[ext_resource path="res://player_select.ogg" type="AudioStream" id=8]
[ext_resource path="res://music.png" type="Texture" id=9]
[ext_resource path="res://no_music.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]

resource/name = "title_page"
length = 20.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sam:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3, 19 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("new:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 15.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("load:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 16.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pixel:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1, 17.8 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pixel:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 1, 5, 7, 12, 15, 17 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -27.5292, -23.3229 ), Vector2( 24.3723, -22.0755 ), Vector2( 24.5374, 3.36703 ), Vector2( -23.8159, 4.19667 ), Vector2( -24.4761, 21.3428 ), Vector2( 27.1778, 22.1724 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("sam:transform/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 3, 7, 9, 15, 16, 18.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -27.53, -23.575 ), Vector2( 24.949, -23.0219 ), Vector2( 24.949, 3.52689 ), Vector2( -24.2295, 4.63309 ), Vector2( -24.7246, 20.9495 ), Vector2( 26.4342, 22.3323 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("name:bbcode/bbcode")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2, 3.3, 3.5, 3.7, 3.9, 4.1, 4.3, 4.5, 4.8, 5, 5.4, 5.6, 5.8, 6, 6.2, 6.6, 6.8, 7, 7.2, 7.4, 7.6, 7.8, 8, 8.2, 8.4, 8.8, 9.2, 9.4, 9.6, 10, 10.3, 10.4, 10.6, 10.8, 10.9, 11.2, 11.6, 12, 12.4, 12.8, 13.2, 13.6, 14, 14.4, 14.8, 15.2, 15.6, 16, 16.4, 16.8, 17.2, 17.6, 18, 18.4, 18.8, 19.2, 19.6, 20 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "l", "", "l", "V", "Vl", "Vil", "Vi", "Vid", "Vidl", "Vidyl", "Vidye", "Vidyea", "Vidye", "Vidyl", "Vidl", "Videl", "Video", "Video l", "Video Gl", "Video G", "Video Ga", "Video Gal", "Video Gam", "Video Game", "Video Gamel", "Video Game l", "Video Game G", "Video Game GL", "Video Game GLOl", "Video Game GLORl", "Video Game GLORY", "Video Game GLORYl", "Video Game GLOR", "Video Game GLl", "Video Game Gl", "Video Game G", "Video Game Gll", "Video Game Glol", "Video Game Glo", "Video Game Glor", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory", "Video Game Gloryl", "Video Game Glory" ]
}

[node name="player_selection" type="Node2D"]

process/pause_mode = 2
transform/pos = Vector2( 514.234, 304.858 )
transform/scale = Vector2( 16.058, 9.58248 )
script/script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/title_page = SubResource( 1 )
playback/active = true
playback/speed = 0.5
blend_times = [  ]
autoplay = "title_page"

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( -0.22974, 0.307449 )
transform/scale = Vector2( 0.0997623, 0.161618 )
texture = ExtResource( 2 )

[node name="queue" type="Sprite" parent="."]

transform/pos = Vector2( 0.135029, 0.799743 )
transform/scale = Vector2( 0.0903419, 0.0932731 )
texture = ExtResource( 3 )

[node name="sam" type="Sprite" parent="."]

transform/pos = Vector2( -15.1997, 4.42998 )
transform/scale = Vector2( 0.0224115, -0.0403373 )
texture = ExtResource( 4 )

[node name="pixel" type="Sprite" parent="."]

transform/pos = Vector2( -24.2336, 15.0463 )
transform/scale = Vector2( 0.036914, 0.0483219 )
texture = ExtResource( 5 )

[node name="name" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.19, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -12.0
margin/right = 231.0
margin/bottom = 23.0
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = true
bbcode/bbcode = "Video Game Gloryl"
visible_characters = -1

[node name="new" type="Sprite" parent="."]

transform/pos = Vector2( -6.88281, 14.1215 )
transform/scale = Vector2( 0.0438577, 0.0613363 )
texture = ExtResource( 7 )

[node name="new" type="RichTextLabel" parent="new"]

rect/scale = Vector2( 2.5, 2.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -78.0
margin/top = -30.0
margin/right = -6.0
margin/bottom = 6.0
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = true
bbcode/bbcode = "NEW"
visible_characters = -1

[node name="new_button" type="LinkButton" parent="new"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -100.0
margin/top = -50.0
margin/right = 100.0
margin/bottom = 51.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null

[node name="load" type="Sprite" parent="."]

transform/pos = Vector2( 10.4327, 13.8513 )
transform/scale = Vector2( 0.0441717, 0.0558981 )
texture = ExtResource( 7 )

[node name="load" type="RichTextLabel" parent="load"]

rect/scale = Vector2( 2.5, 2.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -85.0
margin/top = -33.0
margin/right = -3.0
margin/bottom = 20.0
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = true
bbcode/bbcode = "LOAD"
visible_characters = -1

[node name="load_button" type="LinkButton" parent="load"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -100.0
margin/top = -51.0
margin/right = 100.0
margin/bottom = 49.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null

[node name="skip" type="LinkButton" parent="."]

rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -26.0
margin/top = 27.0
margin/right = 30.0
margin/bottom = 59.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.182339, 0.699219, 0.163879, 1 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "SKIP"

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="music_button" type="TextureButton" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 26.0
margin/right = 74.0
margin/bottom = 69.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="button_up" from="new/new_button" to="." method="_on_new_button_button_up"]

[connection signal="button_up" from="load/load_button" to="." method="_on_load_button_button_up"]

[connection signal="button_down" from="skip" to="." method="_on_skip_button_down"]

[connection signal="toggled" from="music_button" to="." method="_on_music_button_toggled"]


